fruits-services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oranges
  name: oranges
  namespace: fruits
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: oranges
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apples
  name: apples
  namespace: fruits
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apples
  type: ClusterIP
