tls-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: banana
  namespace: fruits
spec:
  tls:
  - hosts:
    - banana.fruits.app.pod1.lab
    secretName: banana-ecdsa-cert
  rules:
  - host: banana.fruits.app.pod1.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: apples
          servicePort: 80
